# openapi/p4pa-workflow-hub.openapi.yaml
@@ -95,6 +95,26 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/WorkflowErrorDTO'
+  /workflows/{workflowId}:
+    delete:
+      tags:
+        - Workflow
+      operationId: cancelWorkflow
+      parameters:
+        - name: workflowId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Workflow canceled successfully
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WorkflowErrorDTO'
   /workflows/{workflowId}/wait-completion:
     post:
       tags:
